BusOne02/src/objects/My_Setup_Products_vod__c.object
<CustomObject>
    <description>This table is used to keep track of each Rep&apos;s products. One row per product per rep.</description>
    <fields>
        <fullName>Favorite_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates the product is a favorite for the user</description>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Align_ID_vod__c</fullName>
        <description>Globally unique identifier.  This Id is managed by Align</description>
        <externalId>true</externalId>
        <label>Master Align ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Align_Key_vod__c</fullName>
        <description>Used for CRM-Align Integration Mapping</description>
        <externalId>true</externalId>
        <label>Master Align Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product catalog. Each rep should have one row in this table corresponding to the products that they work with.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>My Setup Products</relationshipLabel>
        <relationshipName>My_Setup_Products_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>My Setup Products</label>
    <nameField>
        <label>My Setup Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Setup Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>